# IDATT2503

./: .gitignore
Task10/: 1.py  2.py  3.py  4.py  5.py
Task4/QuestionOne/: Makefile  README.md  main  main.s
Task4/QuestionTwo/: CMakeCache.txt  CMakeLists.txt  Makefile  QTwoCpp  README.md  cmake_install.cmake  cpp_main.cpp
Task4/QuestionTwo/C/: CMakeLists.txt  main.c
Task4/QuestionTwo/Cpp/: CMakeLists.txt  main.cpp
Task4/QuestionTwo/Rust/: Makefile  main.rs
Task5/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  main.c  string_editor.c  string_editor.h
Task5/tests/: CMakeLists.txt  string_editor_fuzzer_test.c  string_editor_test.c
Task6/QuestionOne/: CMakeLists.txt  README.md  main.cpp
Task6/QuestionTwo/: Makefile  README.md  client.js  index.html  main.js  package-lock.json  package.json  server.js
Task7/: 2.py  3.py  4.py  5.py
Task8/: 1.py  2.py  3.py  4.py  5.py  6.py
Task9/: 1.py  2.py  3.py  4.py  6.py
